# covert-channel

./: CMakeLists.txt  Readme.md  covert.h  main.cpp  utils.h
